@@ -1,3 +1,8 @@
+2018-04-10 Magnus Hagdorn
+ * piccolo2/player/PlayerApp.py: allow auto integration, repeat measurements
+   and delay settings directly; disable parameter settings when server is 
+   busy
+
 2018-03-30 Magnus Hagdorn
  * piccolo2/player/player.ui: increase maximum number of repeats to 9999;
  fixes GUI-13
